feat(federation): split out the driver and vehicle management into separate services and created a gateway service to federate them together as well as manage its own schema. Also added a monolith section to keep it the way it was in case a comparison was needed

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,5 @@ services:
     image: postgres:10.4-alpine
     ports:
       - 5432:5432
-    environment:
-      POSTGRES_DB: "${POSTGRES_DB}"
-    volumes:
-      - ./db/docker-entry-scripts:/docker-entrypoint-initdb.d/
+    env_file:
+      - .env
